--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    min-width: 375px;
-    max-width: 1440px;
-    background-color: lightpink;
+    margin: 0;
+    padding: 0;
+    background-color: hsl(30, 54%, 90%);
 }
