--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ main {
     width: 50%;
     background-color: white;
     display: block;
-    margin: auto;
+    margin: 0 auto;
     border-radius: 10px;
     margin-top: 50px;
     padding-top: 20px;
@@ -26,4 +26,8 @@ main {
     width: 80%;
     border-radius: 15px;
     padding: 5px;
+}
+
+.prep {
+    background-color: hsl(330, 100%, 98%);
 }
