--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 main {
     text-align: center;
     width: 50%;
-    background-color: white;
+    background-color:hsl(0, 0%, 100%);
     display: block;
     margin: 0 auto;
     border-radius: 10px;
@@ -30,4 +30,10 @@ main {
 
 .prep {
     background-color: hsl(330, 100%, 98%);
+    border-radius: 15px;
+    margin: 20px;
+}
+
+.prep h4 {
+    
 }
