--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ main {
     padding-top: 20px;
 }
 
+/* Introduction Section */
 
 .intro-content img {
     width: 80%;
@@ -35,5 +36,21 @@ main {
 }
 
 .prep h4 {
-    
+    color: hsl(332, 51%, 32%);
+    text-align: left;
+    padding-left: 20px;
+    padding-top: 10px;
 }
+
+.prep-list {
+    text-align: left;
+}
+
+
+/* Ingredient Section */
+
+
+
+
+
+/* Instruction Section */
