--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,10 @@ main {
     padding-top: 20px;
 }
 
+main h1 {
+    letter-spacing: 2px;
+}
+
 /* Introduction Section */
 
 .intro-content img {
@@ -44,16 +48,20 @@ main {
 
 .prep-list {
     text-align: left;
+    line-height: 1.5;
+    padding-bottom: 10px;
 }
 
 
 /* Ingredients Section */
 .ingredients h2 {
     color: hsl(14, 45%, 36%);
+    letter-spacing: 1px;
 }
 
 .ingredients-list {
     text-align: left;
+    line-height: 1.5;
 }
 
 .border {
@@ -69,15 +77,19 @@ main {
 
 .instruction h2 {
     color: hsl(14, 45%, 36%);
+    letter-spacing: 1px;
 }
 
-.instructions-list {
-    text-align: left;
-    
+.instruction-list {
+   text-align: left;
+   padding-right: 10px;
+   line-height: 1.5;
+
 }
 
 /* Nutrition Section */
 
 .nutrition h2 {
     color: hsl(14, 45%, 36%);
+    letter-spacing: 1px;
 }
