--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,14 @@ body {
     text-align: left;
     min-width: 375px;
     max-width: 1440px;
+    font-family: 'Outfit', sans-serif;
+    
+}
+
+h1,
+h2
+{
+    font-family: 'Young Serif', serif
 }
 
 
@@ -24,6 +32,7 @@ main h1 {
     letter-spacing: 2px;
     text-align: left;
     padding-left: 10%;
+
 }
 
 .intro-content p {
